syntax = "proto3";
package relayer.chains.corda.config;

import "gogoproto/gogo.proto";

option go_package = "github.com/mapdev33/yui-relayer/chains/corda";
option (gogoproto.goproto_getters_all) = false;

message ChainConfig {
  string chain_id = 1;
  string grpc_addr = 2;
  string party_name = 3;
  string bank_grpc_addr = 4;
}

message ProverConfig {}
